tests/hole_var_typed_bad.stderr
tests/hole_var_typed_bad.hop:3:9: error: HOP2007: identifier '_' is reserved
