tests/hole_var_typed_bad.hop
// Verifies hole variable typed is rejected.
fn example() {
    var _ int = 1
}
